fix(página de posts): erro de overflow corrigido

--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -18,7 +18,7 @@ html, .tudolanding {
     width: 100%;
     margin: 0;
     padding: 0;
-    overflow-x: auto;
+    overflow-x: hidden;
     background: linear-gradient(to bottom, #5B162D 25%, #000 78%);
 }
 
@@ -60,7 +60,6 @@ html, .tudolanding {
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
 }
 
 .tdtitulo{
